crates/graphql-orm/tests/ui/composite_write_helper_unavailable.stderr
error[E0599]: no function or associated item named `create` found for struct `CompositeWriteRecord` in the current scope
  --> tests/ui/composite_write_helper_unavailable.rs:23:35
   |
10 | struct CompositeWriteRecord {
   | --------------------------- function or associated item `create` not found for this struct
...
23 |     let _ = CompositeWriteRecord::create;
   |                                   ^^^^^^ function or associated item not found in `CompositeWriteRecord`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `create`, perhaps you need to implement one of them:
           candidate #1: `CacheFactory`
           candidate #2: `ExtensionFactory`
           candidate #3: `async_graphql::CustomDirectiveFactory`
           candidate #4: `regex_syntax::hir::interval::Interval`

error[E0599]: no function or associated item named `update_by_id` found for struct `CompositeWriteRecord` in the current scope
  --> tests/ui/composite_write_helper_unavailable.rs:24:35
   |
10 | struct CompositeWriteRecord {
   | --------------------------- function or associated item `update_by_id` not found for this struct
...
24 |     let _ = CompositeWriteRecord::update_by_id;
   |                                   ^^^^^^^^^^^^ function or associated item not found in `CompositeWriteRecord`
